--- a/Inventory/Inventory.Api/Inventory.Api.csproj
+++ b/Inventory/Inventory.Api/Inventory.Api.csproj
@@ -4,5 +4,13 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\EventBusRabbitMQ\EventBus.RabbitMQ.csproj" />
+  </ItemGroup>
+
 
 </Project>
