--- a/Invoice/Invoice.Api/appsettings.json
+++ b/Invoice/Invoice.Api/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "RabbitMqConnection": "localhost",
+  "RabbitMqUserName": "guest",
+  "RabbitMqPassword": "guest",
+  "RabbitMqRetryCount": 3,
+  "SubscriptionClientName": "Invoice"
 }
