--- a/Payment/Payment.Api/appsettings.json
+++ b/Payment/Payment.Api/appsettings.json
@@ -6,5 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "RabbitMqConnection": "localhost",
+  "RabbitMqUserName": "guest",
+  "RabbitMqPassword": "guest",
+  "RabbitMqRetryCount": 3,
+  "SubscriptionClientName" : "Payment"
+
 }
