Payment Microservice completed

--- a/Payment/Payment.Api/appsettings.json
+++ b/Payment/Payment.Api/appsettings.json
@@ -7,10 +7,11 @@
     }
   },
   "AllowedHosts": "*",
+  "ConnectionString": "Server=.\\SQLExpress;Database=Yocal.Payment;Trusted_Connection=True;MultipleActiveResultSets=true",
   "RabbitMqConnection": "localhost",
   "RabbitMqUserName": "guest",
   "RabbitMqPassword": "guest",
   "RabbitMqRetryCount": 3,
-  "SubscriptionClientName" : "Payment"
+  "SubscriptionClientName": "Payment"
 
 }
