--- a/EventBusRabbitMQ/EventBus.RabbitMQ.csproj
+++ b/EventBusRabbitMQ/EventBus.RabbitMQ.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="RabbitMQ.Client.Core.DependencyInjection" Version="4.3.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Framework\EventBus\EventBus.csproj" />
+  </ItemGroup>
+
 </Project>
