--- a/Invoice/Invoice.Domain/Invoice.Domain.csproj
+++ b/Invoice/Invoice.Domain/Invoice.Domain.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Event\" />
+    <ProjectReference Include="..\..\Framework\Infrastructure\Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
