--- a/Inventory/Inventory.Api/appsettings.json
+++ b/Inventory/Inventory.Api/appsettings.json
@@ -6,5 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionString": "Server=.\\SQLExpress;Database=Yocal.Inventory;Trusted_Connection=True;MultipleActiveResultSets=true",
+  "RabbitMqConnection": "localhost",
+  "RabbitMqUserName": "guest",
+  "RabbitMqPassword": "guest",
+  "RabbitMqRetryCount": 3,
+  "SubscriptionClientName": "Inventory"
 }
