--- a/Invoice/Invoice.Api/appsettings.json
+++ b/Invoice/Invoice.Api/appsettings.json
@@ -7,6 +7,7 @@
     }
   },
   "AllowedHosts": "*",
+  "ConnectionString": "Server=.\\SQLExpress;Database=Yocal.Invoice;Trusted_Connection=True;MultipleActiveResultSets=true",
   "RabbitMqConnection": "localhost",
   "RabbitMqUserName": "guest",
   "RabbitMqPassword": "guest",
