--- a/Invoice/Invoice.Api/Invoice.Api.csproj
+++ b/Invoice/Invoice.Api/Invoice.Api.csproj
@@ -9,6 +9,7 @@
     <ProjectReference Include="..\..\Framework\EventBus\EventBus.csproj" />
     <ProjectReference Include="..\..\Framework\EventLogStore.Ef\EventLogStore.Ef.csproj" />
     <ProjectReference Include="..\..\Framework\Infrastructure\Infrastructure.csproj" />
+    <ProjectReference Include="..\..\Share\Share.IntegrationEvents\Share.IntegrationEvents.csproj" />
     <ProjectReference Include="..\Invoice.Data\Invoice.Data.csproj" />
     <ProjectReference Include="..\Invoice.Domain\Invoice.Domain.csproj" />
   </ItemGroup>
