--- a/Inventory/Inventory.Api/Inventory.Api.csproj
+++ b/Inventory/Inventory.Api/Inventory.Api.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\EventBusRabbitMQ\EventBus.RabbitMQ.csproj" />
+    <ProjectReference Include="..\..\Framework\EventBusRabbitMQ\EventBus.RabbitMQ.csproj" />
     <ProjectReference Include="..\..\Framework\EventBus\EventBus.csproj" />
     <ProjectReference Include="..\..\Framework\EventLogStore.Ef\EventLogStore.Ef.csproj" />
     <ProjectReference Include="..\..\Framework\Infrastructure\Infrastructure.csproj" />
