--- a/Payment/Payment.Api/Payment.Api.csproj
+++ b/Payment/Payment.Api/Payment.Api.csproj
@@ -5,7 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\EventBusRabbitMQ\EventBus.RabbitMQ.csproj" />
+    <ProjectReference Include="..\..\Framework\EventBusRabbitMQ\EventBus.RabbitMQ.csproj" />
+    <ProjectReference Include="..\..\Framework\EventBus\EventBus.csproj" />
     <ProjectReference Include="..\..\Framework\EventLogStore.Ef\EventLogStore.Ef.csproj" />
     <ProjectReference Include="..\..\Framework\Infrastructure\Infrastructure.csproj" />
     <ProjectReference Include="..\..\Share\Share.IntegrationEvents\Share.IntegrationEvents.csproj" />
